# ismcts

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ismcts.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  fusion.py  ismcts.py  mo_ismcts.py  pimc.py  smooth_ucb.py  so_ismcts.py
src/games/: __init__.py  game_base.py  kuhn_poker.py  liars_dice.py  phantom_ttt.py
src/viz/: __init__.py  app.py
tests/: test_fusion.py  test_ismcts.py  test_kuhn.py  test_phantom_ttt.py
